# lucario-reasons

./: README.md  pyproject.toml
lucario_reasons/: common.py  pokerank.py  poketags.txt
pokerank/: get_poketags.py
