[tool.poetry]
name = "lucario-reasons"
version = "0.1.0"
description = "scrape e621 for Lucario data!"
authors = ["Floozutter <me@floozutter.site>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.9"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
